second fix commit

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             <!--.bg-white-->
             <div class="advertising-container">
                 <span>Some of the Fortune 500 companies where our students have done internships:</span>
-                <img src="/images/company-logos.png" alt="#!">
+                <img src="images/company-logos.png" alt="#!">
             </div>
             <!--.advertising-container-->
             <div class="bottom-text-container">
